# bmcis-knowledge-mcp-local

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  ANALYSIS_INDEX.md  CLAUDE.md  DATA_MODELS_ANALYSIS.md  DATA_MODELS_QUICK_REFERENCE.md  REFINEMENT-PLANS-INDEX.md  SEARCH_TYPE_SAFETY_SUMMARY.md  TASK-1-REFINEMENT-SUMMARY.md  TASK_2_1_COMPLETION_SUMMARY.md  TASK_2_2_IMPLEMENTATION_SUMMARY.md  TASK_4_REFINEMENTS_DELIVERY.md  TASK_9_2_PROGRESS.md  TEAM-2-COMPLETION-REPORT.md  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup-dev.sh  test_generator_semantics.py
.claude/commands/: uwo-handoff.md  uwo-ready.md
.git-masking/: .gitignore  README.md  branch-mapping.template.json  check-branch.sh  new-branch.sh  template-commit-messages.txt
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
docs/: BLOCKER1-RESOLUTION.md  CODEBASE_SEARCH_REPORT.md  CODE_EXECUTION_QUICK_START.md  CODE_EXECUTION_README.md  QUICK_REFERENCE.md  QUICK_WINS_IMPLEMENTATION.md  README.md  RELEVANCE_ANALYSIS_AND_IMPROVEMENTS.md  RESPONSE_FORMATTING_INTEGRATION_SUMMARY.md  SEARCH_INDEX.md  SEARCH_RELEVANCE_REPORT.md  SEARCH_RESULTS_SUMMARY.txt  SEARCH_TESTING_SUMMARY.md  TESTING_REPORT_2025-11-09.md  TEST_RESPONSE_FORMATTING_SUMMARY.md  boost-strategies-guide.md  performance_optimization_roadmap.md  performance_quick_reference.md  rrf-algorithm-guide.md  search-config-reference.md  search_performance_optimization.md  search_relevance_results.json  task-5-4-implementation-summary.md  task-5-refinement-orchestration.md  task-9-2-current-state.md  task-9-2-implementation-guide.md
examples/: boost_optimization_example.py
scripts/: benchmark_bm25_search.py  benchmark_insertion.py  benchmark_mcp_tools.py  evaluate_search_relevance.py  ingest_bmcis_data.py  ingest_bmcis_full.py  ingest_bmcis_production.py  quick_ingest.py  verify_hnsw_index.py
session-handoffs/: 2024-11-09-0730-mcp-code-execution-prd-enhancements.md  2025-11-07-1931-prd-creation-complete.md  2025-11-08-0205-task-master-setup-complete.md  2025-11-08-0235-checkpoint-task-1-complete.md  2025-11-08-0600-phase-0-infrastructure-complete.md  2025-11-08-1655-crash-recovery-task-4-complete.md  2025-11-08-1700-task-6-complete-merged.md  2025-11-08-1740-task-2-complete-task-3-ready.md  2025-11-08-1800-tasks-1-5-refinements-planning-complete.md  2025-11-08-2230-parallel-orchestration-complete.md  2025-11-08-2300-task-3-pr-ready.md  2025-11-08-2330-tasks-1-4-refinements-complete.md  2025-11-09-0743-tasks-1-4-refinements-task-5-complete-documentation-reorganization.md  2025-11-09-1145-task7-phase1-complete.md  2025-11-09-2045-bmcis-mcp-ingestion-complete.md  2025-11-09-2105-mcp-loading-issues.md  2025-11-09-2106-mcp-fastmcp-method-fixed.md  2025-11-09-2130-search-relevance-improvements.md  2025-11-09-task10-fastmcp-complete.md  2025-11-09-task10-start.md  2025-11-09-task10.2-complete.md  2025-11-09-task10.3-complete.md
sql/: schema_768.sql
tests/: TEST_CROSS_ENCODER_README.md  TEST_HYBRID_SEARCH_README.md  test_batch_processor.py  test_bm25_search.py  test_boost_optimizer.py  test_boost_strategy_factory.py  test_boosting.py  test_chunk_inserter.py  test_chunker.py  test_circuit_breaker.py  test_confidence_filtering.py  test_config.py  test_context_header.py  test_core_config.py  test_cross_encoder_reranker.py  test_database.py  test_database_connection_pool.py  test_database_pool.py  test_dev_environment.py  test_embedding_config.py  test_embedding_database.py  test_embedding_generator.py  test_embedding_integration.py  test_embedding_model_loader.py  test_embedding_performance.py  test_embedding_real.py  test_embedding_types.py  test_entity_boosting.py  test_entity_boosting_integration.py  test_filters.py  test_hybrid_search.py  test_hybrid_search_parallel.py  test_logging.py  test_markdown_reader.py  test_model_loader.py  test_query_expansion.py  test_query_expansion_integration.py  test_query_router.py  test_rrf.py  test_search_bm25.py  (+15 more)
(+362 files in other folders)
