[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bmcis-knowledge-mcp"
version = "1.0.0"
description = "BMCIS Knowledge Base MCP Server with PostgreSQL and pgvector support"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "BMCIS Team", email = "contact@bmcis.io" }
]
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.2.0",
    "black>=23.0.0",
    "isort>=5.13.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true

[[tool.mypy.overrides]]
module = [
    "psycopg.*",
    "pgvector.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
]
ignore = ["E501"]

[tool.ruff.isort]
profile = "black"
line-length = 100

[tool.black]
line-length = 100
target-version = ["py311"]
